--- a/visao_08.html
+++ b/visao_08.html
@@ -16,7 +16,7 @@
             padding: 20px;
             border-radius: 10px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            max-width: 600px;
+            max-width: 98%;
             margin: auto;
         }
         h2 {
@@ -36,7 +36,7 @@
             width: 100%;
             padding: 12px;
             font-size: 16px;
-            background-color: #08146e;
+            background-color: #4f0e8f;
             color: white;
             border: none;
             border-radius: 8px;
