--- a/visao_08.html
+++ b/visao_08.html
@@ -36,7 +36,7 @@
             width: 100%;
             padding: 12px;
             font-size: 16px;
-            background-color: #4f0e8f;
+            background-color: #0d0d6b;
             color: white;
             border: none;
             border-radius: 8px;
