--- a/visao_08.html
+++ b/visao_08.html
@@ -58,7 +58,7 @@
 </head>
 <body>
     <div class="quiz-container">
-        <h2>Teste de Visão</h2>
+        <h2>Teste rápido de Visão</h2>
         <div id="quiz"></div>
         <div id="result" class="result"></div>
     </div>
