--- a/visao_08.html
+++ b/visao_08.html
@@ -20,7 +20,7 @@
             margin: auto;
         }
         h2 {
-            color: darkred;
+            color: black;
         }
         .question {
             font-weight: bold;
