--- a/ComoEstaoSuasAmizades.html
+++ b/ComoEstaoSuasAmizades.html
@@ -44,7 +44,7 @@
             transition: background 0.3s;
         }
         .options button:hover {
-            background-color: #004c99;
+            background-color: #990029;
         }
         .result {
             margin-top: 20px;
