--- a/ComoEstaoSuasAmizades.html
+++ b/ComoEstaoSuasAmizades.html
@@ -113,7 +113,7 @@
     document.getElementById("quiz").innerHTML = "";
     document.getElementById("result").innerHTML = `
         <p>${message}</p>
-        <img src='https://cdn-icons-png.flaticon.com/512/845/845646.png' alt='Resultado'>
+        <img src='https://cdn-icons-png.flaticon.com/512/845/845646.png' alt='Resultado' style="width: 150px; height: auto;">
         <br><br>
         <button onclick="fecharTeste()" style="padding: 10px 20px; font-size: 16px; background: #0d0d6b; color: white; border: none; border-radius: 5px; cursor: pointer;">Continuar lendo o E-book</button>
     `;
