--- a/ComoEstaoSuasAmizades.html
+++ b/ComoEstaoSuasAmizades.html
@@ -44,7 +44,7 @@
             transition: background 0.3s;
         }
         .options button:hover {
-            background-color: #990029;
+            background-color: #4a0114;
         }
         .result {
             margin-top: 20px;
@@ -113,7 +113,7 @@
     document.getElementById("quiz").innerHTML = "";
     document.getElementById("result").innerHTML = `
         <p>${message}</p>
-        <img src='https://cdn-icons-png.flaticon.com/512/845/845646.png' alt='Resultado' style="width: 150px; height: auto;">
+        <img src='https://cdn-icons-png.flaticon.com/512/845/845646.png' alt='Resultado' style="width: 150vw; height: auto;">
         <br><br>
         <button onclick="fecharTeste()" style="padding: 10px 20px; font-size: 16px; background: #0d0d6b; color: white; border: none; border-radius: 5px; cursor: pointer;">Continuar lendo o E-book</button>
     `;
